Mute sound menu: Weapon, bullet/explosion, pain/death, pickup, movement, voice-com, other...
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3709 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -46,7 +46,7 @@ menuitemtextinput "Mouse sensitivity			" "$sensitivity" "sensitivity $arg1"
 menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 [Low Medium Good "Best (but slow)"] "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
-menuitem "2			  [ OK ]" "resetgl"
+menuitem "2			  [ OK ]" [ closemenu "QUICK setup"; resetgl ]
 
 alias getgfxq [
     if (= $minlod 200) [ result 4 ] [
@@ -232,7 +232,7 @@ menuitem "2		    [ Apply now! ]" resetgl
 newmenu "Advanced video settings"
 
 alias fsaa_valuemap "-1 2 4 8 16"
-menuitemslider "Antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
+menuitemslider "Antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "Off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
 
 alias minlod_valuemap "25 60 100 250"
 menuitemslider "Minimal level of detail: " 0 3 "(findlist $minlod_valuemap $minlod)" 1 ["Low" "Decent" "Good" "Best"] "minlod (at $minlod_valuemap $arg1)"
@@ -287,21 +287,6 @@ menuitem "Slow machine 		  (20-25 FPS)" [closemenu "FPS Range"; fpsrange 20 25]
 menuitem "Sensible default 	  (30-40 FPS)" [closemenu "FPS Range"; fpsrange 30 40]
 menuitem "FPS whore 		  (60-60 FPS)" [closemenu "FPS Range"; fpsrange 60 60]
 menuitem "I don't understand LOD (100+ FPS)" [closemenu "FPS Range"; fpsrange 100 1000]
-
-newmenu sound
-
-menuitemslider "Sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
-menuitemslider "Music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
-menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "Low Medium High" "new_sound_quality $arg1"
-menuitem "" -1
-menuitem "Advanced settings..." [ showmenu "Advanced settings" ]
-
-
-newmenu "Advanced settings"
-menuitemslider "Sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
-menuitemcheckbox "Footsteps: " "$footsteps" "footsteps $arg1"
-menuitemcheckbox "Bullet hit: " "$bulletbouncesound" "bulletbouncesound $arg1"
-menuitemcheckbox "Bullet near-miss: " "$bulletairsound" "bulletairsound $arg1"
 
 newmenu gameplay
 
@@ -364,4 +349,140 @@ menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .p
 
 newmenu "Scope crosshairs"
 menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png) scope" 1
+
+
+newmenu sound
+
+menuitemslider "Sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
+menuitemslider "Music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
+menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "Low Medium High" "new_sound_quality $arg1"
+menuitem "" -1
+menuitem "Advanced settings..." [ showmenu "Advanced settings" ]
+
+newmenu "Advanced settings"
+
+menuitemslider "Sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
+menuitemcheckbox "Footsteps: " "$footsteps" "footsteps $arg1"
+menuitemcheckbox "Bullet hit: " "$bulletbouncesound" "bulletbouncesound $arg1"
+menuitemcheckbox "Bullet near-miss: " "$bulletairsound" "bulletairsound $arg1"
+menuitem "" -1
+menuitem "Mute/Un-mute specific sounds..."	[ showmenu "Mute specific sounds" ]
+
+
+newmenu "Mute specific sounds"
+
+menuitem "Weapon sounds"		[ showmenu "Mute weapon sounds" ]
+menuitem "Bullet/explosion sounds"	[ showmenu "Mute bullet/explosion sounds" ]
+menuitem "Pain/death sounds" 		[ showmenu "Mute pain/death sounds" ]
+menuitem "Pickup sounds"		[ showmenu "Mute pickup sounds" ]
+menuitem "Movement sounds"		[ showmenu "Mute movement sounds" ]
+menuitem "Voice-com sounds"		[ showmenu "Mute voice-coms" ]
+menuitem "Other sounds"			[ showmenu "Mute other sounds" ]
+
+newmenu  "Mute weapon sounds"
+
+menuitemcheckbox "Knife: " "(soundmuted 7)" "mutesound 7 (! $arg1)"
+menuitemcheckbox "Pistol: " "(soundmuted 8)" "mutesound 8 (! $arg1)"
+menuitemcheckbox "Pistol reloading: " "(soundmuted 9)" "mutesound 9 (! $arg1)"
+menuitemcheckbox "Shotgun: " "(soundmuted 10)" "mutesound 10 (! $arg1)"
+menuitemcheckbox "Shotgun reloading: " "(soundmuted 11)" "mutesound 11 (! $arg1)"
+menuitemcheckbox "Submachine gun: " "(soundmuted 12)" "mutesound 12 (! $arg1)"
+menuitemcheckbox "Submachine gun reloading: " "(soundmuted 13)" "mutesound 13 (! $arg1)"
+menuitemcheckbox "Sniper: " "(soundmuted 14)" "mutesound 14 (! $arg1)"
+menuitemcheckbox "Sniper reloading: " "(soundmuted 15)" "mutesound 15 (! $arg1)"
+menuitemcheckbox "Assault Rifle: " "(soundmuted 16)" "mutesound 16 (! $arg1)"
+menuitemcheckbox "Assault Rifle reloading: " "(soundmuted 17)" "mutesound 17 (! $arg1)"
+menuitemcheckbox "Grenade pull: " "(soundmuted 39)" "mutesound 39 (! $arg1)"
+menuitemcheckbox "Grenade throw: " "(soundmuted 40)" "mutesound 40 (! $arg1)"
+menuitemcheckbox "Grenade bounce 1: " "(soundmuted 41)" "mutesound 41 (! $arg1)"
+menuitemcheckbox "Grenade bounce 2: " "(soundmuted 42)" "mutesound 42 (! $arg1)"
+menuitemcheckbox "Akimbo reload: " "(soundmuted 43)" "mutesound 43 (! $arg1)"
+menuitemcheckbox "Change weapon: " "(soundmuted 44)" "mutesound 44 (! $arg1)"
+menuitemcheckbox "Empty clip: " "(soundmuted 22)" "mutesound 22 (! $arg1)"
+
+newmenu "Mute pickup sounds"
+
+menuitemcheckbox "Ammo pickup: " "(soundmuted 18)" "mutesound 18 (! $arg1)"
+menuitemcheckbox "Health pickup: " "(soundmuted 19)" "mutesound 19 (! $arg1)"
+menuitemcheckbox "Armour pickup: " "(soundmuted 20)" "mutesound 20 (! $arg1)"
+menuitemcheckbox "Akimbo pickup: " "(soundmuted 21)" "mutesound 21 (! $arg1)"
+menuitemcheckbox "Akimbo finished: " "(soundmuted 23)" "mutesound 23 (! $arg1)"
+
+newmenu "Mute pain/death sounds"
+
+menuitemcheckbox "Pain 1: " "(soundmuted 24)" "mutesound 24 (! $arg1)"
+menuitemcheckbox "Pain 2: " "(soundmuted 25)" "mutesound 25 (! $arg1)"
+menuitemcheckbox "Pain 3: " "(soundmuted 26)" "mutesound 26 (! $arg1)"
+menuitemcheckbox "Pain 4: " "(soundmuted 27)" "mutesound 27 (! $arg1)"
+menuitemcheckbox "Pain 5: " "(soundmuted 28)" "mutesound 28 (! $arg1)"
+menuitemcheckbox "Pain 6: " "(soundmuted 29)" "mutesound 29 (! $arg1)"
+menuitemcheckbox "Die 1: " "(soundmuted 30)" "mutesound 30 (! $arg1)"
+menuitemcheckbox "Die 2: " "(soundmuted 31)" "mutesound 31 (! $arg1)"
+menuitemcheckbox "Gib sounds: " "(soundmuted 45)" "mutesound 45 (! $arg1)"
+menuitemcheckbox "Tinnitus: " "(soundmuted 59)" "mutesound 59 (! $arg1)"
+
+newmenu "Mute movement sounds"
+
+menuitemcheckbox "Footsteps: " "(soundmuted 50)" "mutesound 50 (! $arg1)"
+menuitemcheckbox "Crouch: " "(soundmuted 51)" "mutesound 51 (! $arg1)"
+menuitemcheckbox "Water footsteps: " "(soundmuted 52)" "mutesound 52 (! $arg1)"
+menuitemcheckbox "Water crouching: " "(soundmuted 53)" "mutesound 53 (! $arg1)"
+menuitemcheckbox "Crouch-in: " "(soundmuted 54)" "mutesound 54 (! $arg1)"
+menuitemcheckbox "Crouch-out: " "(soundmuted 55)" "mutesound 55 (! $arg1)"
+menuitemcheckbox "Jump: " "(soundmuted 0)" "mutesound 0 (! $arg1)"
+menuitemcheckbox "Soft landing: " "(soundmuted 1)" "mutesound 1 (! $arg1)"
+menuitemcheckbox "Hard landing: " "(soundmuted 2)" "mutesound 2 (! $arg1)"
+menuitemcheckbox "Splash 1: " "(soundmuted 33)" "mutesound 33 (! $arg1)"
+menuitemcheckbox "Splash 2: " "(soundmuted 34)" "mutesound 34 (! $arg1)"
+menuitemcheckbox "Underwater: " "(soundmuted 58)" "mutesound 58 (! $arg1)"
+
+newmenu "Mute bullet/explosion sounds"
+
+menuitemcheckbox "Ricochet air 1: " "(soundmuted 3)" "mutesound 3 (! $arg1)"
+menuitemcheckbox "Ricochet air 2: " "(soundmuted 4)" "mutesound 4 (! $arg1)"
+menuitemcheckbox "Ricochet hit: " "(soundmuted 5)" "mutesound 5 (! $arg1)"
+menuitemcheckbox "Bullet (water impact): " "(soundmuted 6)" "mutesound 6 (! $arg1)"
+menuitemcheckbox "Grenade explosion: " "(soundmuted 32)" "mutesound 32 (! $arg1)"
+
+newmenu "Mute other sounds"
+
+menuitemcheckbox "Flag drop: " "(soundmuted 35)" "mutesound 35 (! $arg1)"
+menuitemcheckbox "Flag pickup: " "(soundmuted 36)" "mutesound 36 (! $arg1)"
+menuitemcheckbox "Flag return: " "(soundmuted 37)" "mutesound 37 (! $arg1)"
+menuitemcheckbox "Flag score: " "(soundmuted 38)" "mutesound 38 (! $arg1)"
+menuitemcheckbox "Headshot: " "(soundmuted 46)" "mutesound 46 (! $arg1)"
+menuitemcheckbox "Call vote: " "(soundmuted 47)" "mutesound 47 (! $arg1)"
+menuitemcheckbox "Pass vote: " "(soundmuted 48)" "mutesound 48 (! $arg1)"
+menuitemcheckbox "Fail vote: " "(soundmuted 49)" "mutesound 49 (! $arg1)"
+menuitemcheckbox "Menu select: " "(soundmuted 56)" "mutesound 56 (! $arg1)"
+menuitemcheckbox "Menu enter: " "(soundmuted 57)" "mutesound 57 (! $arg1)"
+
+newmenu "Mute voice-coms"
+
+menuitemcheckbox "Affirmative: " "(soundmuted 60)" "mutesound 60 (! $arg1)"
+menuitemcheckbox "All-right sir: " "(soundmuted 61)" "mutesound 61 (! $arg1)"
+menuitemcheckbox "Come on, move: " "(soundmuted 62)" "mutesound 62 (! $arg1)"
+menuitemcheckbox "Coming in with the flag: " "(soundmuted 63)" "mutesound 63 (! $arg1)"
+menuitemcheckbox "Cover me: " "(soundmuted 64)" "mutesound 64 (! $arg1)"
+menuitemcheckbox "Defend the flag: " "(soundmuted 65)" "mutesound 65 (! $arg1)"
+menuitemcheckbox "Enemy down: " "(soundmuted 66)" "mutesound 66 (! $arg1)"
+menuitemcheckbox "Go get 'em boys!: " "(soundmuted 67)" "mutesound 67 (! $arg1)"
+menuitemcheckbox "Good job team: " "(soundmuted 68)" "mutesound 68 (! $arg1)"
+menuitemcheckbox "I got one!: " "(soundmuted 69)" "mutesound 69 (! $arg1)"
+menuitemcheckbox "I made contact: " "(soundmuted 70)" "mutesound 70 (! $arg1)"
+menuitemcheckbox "I'm attacking: " "(soundmuted 71)" "mutesound 71 (! $arg1)"
+menuitemcheckbox "I'm on defense: " "(soundmuted 72)" "mutesound 72 (! $arg1)"
+menuitemcheckbox "I'm on your team: " "(soundmuted 73)" "mutesound 73 (! $arg1)"
+menuitemcheckbox "Negative: " "(soundmuted 74)" "mutesound 74 (! $arg1)"
+menuitemcheckbox "No can do: " "(soundmuted 75)" "mutesound 75 (! $arg1)"
+menuitemcheckbox "Recover the flag: " "(soundmuted 76)" "mutesound 76 (! $arg1)"
+menuitemcheckbox "Sorry: " "(soundmuted 77)" "mutesound 77 (! $arg1)"
+menuitemcheckbox "Spread out: " "(soundmuted 78)" "mutesound 78 (! $arg1)"
+menuitemcheckbox "Stay here: " "(soundmuted 79)" "mutesound 79 (! $arg1)"
+menuitemcheckbox "Stay together: " "(soundmuted 80)" "mutesound 80 (! $arg1)"
+menuitemcheckbox "There's no way sir: " "(soundmuted 81)" "mutesound 81 (! $arg1)"
+menuitemcheckbox "We did it!: " "(soundmuted 82)" "mutesound 82 (! $arg1)"
+menuitemcheckbox "Yes: " "(soundmuted 83)" "mutesound 83 (! $arg1)"
+menuitemcheckbox "Nice shot: " "(soundmuted 84)" "mutesound 84 (! $arg1)"
+
 
