add whois command to admin menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3716 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -34,6 +34,7 @@ menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Change mastermode" 		"showmenu Mastermode"
 menuitem "Change the server description" "saycommand /serverdesc "
+menuitem "Find a players IP address"	"saycommand /whois "
 menuitem "Give admin"			[ showmenu "give admin" ]
 menuitem "" -1
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
