unmute all sounds
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3717 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -379,6 +379,8 @@ menuitem "Pickup sounds"		[ showmenu "Mute pickup sounds" ]
 menuitem "Movement sounds"		[ showmenu "Mute movement sounds" ]
 menuitem "Voice-com sounds"		[ showmenu "Mute voice-coms" ]
 menuitem "Other sounds"			[ showmenu "Mute other sounds" ]
+menuitem "" -1
+menuitem "Un-mute all sounds..."	"unmuteallsounds"
 
 newmenu  "Mute weapon sounds"
 
