--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -2318,7 +2318,7 @@ docargument [A] [] [value] [0];
 
 docident [fov] [Sets the field of view (fov).];
 
-docargument [N] [the FOV value] [min 90/max 120/default 100];
+docargument [N] [the FOV value] [min 75/max 120/default 90];
 
 
 
@@ -2955,6 +2955,14 @@ docident [sendmap] [Sends the current map to the server and sends other players 
 docargument [M] [Map to save and reload locally] [] [0];
 
 docremark [If the map argument is specified, the map is first saved and then reloaded before sending it. Note: It's always required to be on the map one wants to send before issuing this command!];
+
+
+
+docident [serverdesc] [If the server was run with -n1 and -n2 arguments (prefix and suffix of descriptive title) a serveradmin can set a user-defined server description with this command, if it wasn't this command results in "invalid vote". This title will only stay until the next map is loaded.];
+
+docargument [D] [description] [] [0];
+
+docremark [If, for example, the server was run with -n"Fred's Server" -n1"Fred's " -n2" Server", then you could call "/serverdesc [pWn4g3 TOSOK]" and it would show up as ""Fred's pWn4g3 TOSOK Server" in the serverbrowser.];
 
 
 
