added maxchars attributes in "Custom Connect"
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3763 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -62,9 +62,9 @@ menuitem "Force serverlist update"	"updatefrommaster 1; showmenu server"
 newmenu "Custom connect"
 
 menuinit [ alias cc1 ""; alias cc2 ""; alias cc3 "" ]	// Resets the aliases
-menuitemtextinput "Server IP/DNS: 		"	"" "alias cc1 $arg1" 
-menuitemtextinput "Server port (optional): 	"	"" "alias cc2 $arg1"
-menuitemtextinput "Server password (optional): 	"	"" "alias cc3 $arg1"
+menuitemtextinput "Server IP/DNS: 		"	"" "alias cc1 $arg1" "" 255 
+menuitemtextinput "Server port (optional): 	"	"" "alias cc2 $arg1" "" 6
+menuitemtextinput "Server password (optional): 	"	"" "alias cc3 $arg1" "" 128
 menuitem "" -1
 menuitem "2		  [ Connect ]			" "connect $cc1 $cc2 $cc3"
 
