hud digit font stuff
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3773 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/font.cfg
+++ b/ac/config/font.cfg
@@ -93,3 +93,17 @@ fontchar 200 448 41  64 	//{
 fontchar 241 448 29  64 	//|
 fontchar 270 448 40  64 	//}
 fontchar 310 448 53  64 	//~
+
+font huddigits "packages/misc/huddigits.png" 48 64
+fontskip 48
+fontchar 0   64  48  64     //0
+fontchar 48  64  48  64     //1
+fontchar 96  64  48  64     //2
+fontchar 144 64  48  64     //3
+fontchar 192 64  48  64     //4
+fontchar 240 64  48  64     //5
+fontchar 288 64  48  64     //6
+fontchar 336 64  48  64     //7
+fontchar 384 64  48  64     //8
+fontchar 432 64  48  64     //9
+
