settings -> input settings
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3798 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -198,7 +198,8 @@ menuitemkeyinput "Map overview: "   toggleshowmap
 menuitemkeyinput "Drop CTF flag: "  dropflag
 menuitem "" -1
 menuitemcheckbox "Invert mouse: " "$invmouse" "invmouse $arg1"
-menuitemtextinput "Mouse sensitivity		" "$sensitivity" "sensitivity $arg1"
+menuitemtextinput "Mouse sensitivity			" "$sensitivity" "sensitivity $arg1"
+menuitemtextinput "Sniper-scope sensitivity		" "$scopesensscale" "alias scopesensscale $arg1"
 menuitem "" -1
 menuitem "Reset keybinds to default settings..." [ showmenu "Reset Binds" ]
 
