linux compile fixes
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3833 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/src/Makefile
+++ b/ac/source/src/Makefile
@@ -6,6 +6,7 @@ PLATFORM_PREFIX=native
 CLIENT_LIBS=-L/usr/X11R6/lib -L../enet -lenet `sdl-config --libs` -lSDL_image -lz -lGL -lopenal -lvorbisfile
 CLIENT_OBJS= \
 	audiomanager.o \
+	packetqueue.o \
 	client.o \
 	clientgame.o \
 	clients2c.o \
