adding packetqueue to codeblocks project
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3850 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/codeblocks/AssaultCube.cbp
+++ b/ac/source/codeblocks/AssaultCube.cbp
@@ -148,6 +148,7 @@
 		<Unit filename="../src/model.h" />
         <Unit filename="../src/oggstream.cpp" />
         <Unit filename="../src/openal.cpp" />
+        <Unit filename="../src/packetqueue.cpp" />
 		<Unit filename="../src/pch.cpp" />
 		<Unit filename="../src/pch.h" />
 		<Unit filename="../src/physics.cpp" />
