sound radius limitations
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3879 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -4,9 +4,9 @@
 // Files listed in here can be either *.wav or *.ogg
 // Filename extensions do not need to be listed.
 
-registersound "player/jump"			// 0 - S_JUMP
-registersound "player/step" 200			// 1 - S_SOFTLAND
-registersound "player/land" 250			// 2 - S_HARDLAND
+registersound "player/jump"	100 0 32		// 0 - S_JUMP
+registersound "player/step" 200	0 24		// 1 - S_SOFTLAND
+registersound "player/land" 250	0 24		// 2 - S_HARDLAND
 registersound "weapon/ric1"			// 3 - S_BULLETAIR1
 registersound "weapon/ric2"			// 4 - S_BULLETAIR2
 registersound "weapon/ric3"			// 5 - S_BULLETHIT
@@ -54,12 +54,12 @@ registersound "misc/headshot" 10		// 46 - S_HEADSHOT
 registersound "misc/vote/vote_call"		// 47 - S_CALLVOTE
 registersound "misc/vote/vote_pass"		// 48 - S_VOTEPASS
 registersound "misc/vote/vote_fail"		// 49 - S_VOTEFAIL
-registersound "player/footsteps" 40 1		// 50 - S_FOOTSTEPS
-registersound "player/crouch" 40 1		// 51 - S_FOOTSTEPSCROUCH
-registersound "player/watersteps" 40 1		// 52 - S_WATERFOOTSTEPS
-registersound "player/watercrouch" 40 1		// 53 - S_WATERFOOTSTEPSCROUCH
-registersound "player/crouch_in"		// 54 - S_CROUCH
-registersound "player/crouch_out"		// 55 - S_UNCROUCH
+registersound "player/footsteps" 40 1 20		// 50 - S_FOOTSTEPS
+registersound "player/crouch" 40 1 10		// 51 - S_FOOTSTEPSCROUCH
+registersound "player/watersteps" 40 1 20		// 52 - S_WATERFOOTSTEPS
+registersound "player/watercrouch" 40 1 10		// 53 - S_WATERFOOTSTEPSCROUCH
+registersound "player/crouch_in" 100 0 14		// 54 - S_CROUCH
+registersound "player/crouch_out" 100 0 14		// 55 - S_UNCROUCH
 registersound "misc/menu_click1"		// 56 - S_MENUSELECT
 registersound "misc/menu_click2"		// 57 - S_MENUENTER
 registersound "player/underwater"		// 58 - S_UNDERWATER
