--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -27,7 +27,7 @@ alias genmapitems [
 ]
 newmenu maps
 // Add maps to the below list to include them in the normal map menu (also for botmaps).
-alias defaultmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
+alias defaultmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_gothic ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
 genmapitems	$defaultmaps
 menuitem	"" -1
 menuitem	"Show all maps..." [ showmenu "all maps" ]
