removed jump sound radius restriction
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3882 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -4,9 +4,9 @@
 // Files listed in here can be either *.wav or *.ogg
 // Filename extensions do not need to be listed.
 
-registersound "player/jump"	50 0 32		// 0 - S_JUMP
-registersound "player/step" 75	0 24		// 1 - S_SOFTLAND
-registersound "player/land" 100	0 24		// 2 - S_HARDLAND
+registersound "player/jump"	50		// 0 - S_JUMP
+registersound "player/step" 75	0 24	// 1 - S_SOFTLAND
+registersound "player/land" 100	0 24	// 2 - S_HARDLAND
 registersound "weapon/ric1"			// 3 - S_BULLETAIR1
 registersound "weapon/ric2"			// 4 - S_BULLETAIR2
 registersound "weapon/ric3"			// 5 - S_BULLETHIT
