'showscores' now takes an argument instead of a keypress; hide scores, when minimap is shown
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3890 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -9,7 +9,7 @@ bind MOUSE3 "weapon"
 bind MOUSE4 "universaldelta  1"
 bind MOUSE5 "universaldelta -1"
 bind BACKSPACE [ if $editing [ delent ] [ dropflag ] ]
-bind TAB "showscores"
+bind TAB [ showscores 1; onrelease [ showscores 0 ] ]
 bind CLEAR ""
 bind RETURN ""
 bind PAUSE ""
@@ -128,7 +128,7 @@ bind LSHIFT "crouch"
 bind RCTRL "jump"
 bind LCTRL "jump"
 bind RALT ""
-bind LALT "toggleshowmap"
+bind LALT "showscores 0; toggleshowmap"
 bind RMETA ""
 bind LMETA ""
 bind LSUPER ""
