option to hide vote hud after own voting
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3895 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -332,7 +332,7 @@ menuitemcheckbox "   Stats " "(= $hidestats 0)" "hidestats (= $arg1 0)"
 menuitemcheckbox "   Gun " "$hudgun" "hudgun $arg1"
 menuitemcheckbox "   Radar " "(= $hideradar 0)" "hideradar (= $arg1 0)"
 menuitemcheckbox "   Team icon " "(= $hideteam 0)" "hideteam (= $arg1 0)"
-menuitemcheckbox "   Votes " "(= $hidevote 0)" "hidevote (= $arg1 0)"
+menuitemslider   "   Votes " 0 2 [$hidevote] 1 ["always" "until voted" "never"] [hidevote $arg1]
 menuitemcheckbox "   Icons " "(= $hidehudequipment 0)" "hidehudequipment (= $arg1 0)"
 menuitemcheckbox "   Console " "(= $hideconsole 0)" "hideconsole (= $arg1 0)"
 menuitemcheckbox "   Spectator info " "(= $hidespecthud 0)" "hidespecthud (= $arg1 0)"
