git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3937 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_desert2.cfg
+++ b/ac/packages/maps/ac_desert2.cfg
@@ -62,7 +62,8 @@ mapmodel 0 0 0 0 "poster"
 mapmodel 1 1 0 0 "aard"
 mapmodel 0 0 0 0 "sail"
 mapmodel 0 0 0 0 "signs/arab"
-mapmodel 2 16 0 0 "nothing"	
+mapmodel 2 16 0 0 "nothing"
+mapmodel 0 17 0 0 "toca/palmtree1"
 texturereset
 texture 0 "./kurt/klite1.jpg"
 texture 0 "./makke/black.jpg"
