--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -124,6 +124,20 @@ newmenu Auto-team
 menuitem "Turn auto-team on"	"autoteam 1"
 menuitem "Turn auto-team off"	"autoteam 0"
 
+newmenu "serverbrowser help"
+
+menuitem "F1: display this help" -1
+menuitem "F3: search player by nickname" [showmenu "search player"]
+menuitem "F5: update serverlist from masterserver" [updatefrommaster 1; closemenu "serverbrowser help"]
+menuitemcheckbox "F6: reverse sort order " "$serversortdir" "serversortdir $arg1"
+menuitemcheckbox "F7: show only good servers" "$showonlygoodservers" "showonlygoodservers $arg1"
+menuitemcheckbox "F8: show minutes remaining" "$showminremain" "showminremain $arg1"
+menuitemslider "Sort servers by: " 0 7 "$serversort" 1 ["ping" "number of players" "max players" "minutes remaining" "map name" "gamemode" "IP address" "description"] "serversort $arg1"
+
+newmenu "search player"
+
+menuitemtextinput "search nickname:  " "result $lastsearchname" "alias lastsearchname $arg1"
+menuitem "                       [search]" [closemenu "search player"; searchnickname $lastsearchname]
 
 newmenu voicecom 1 1
 
