ensure lastsearchname alias is initialized
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4042 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -134,6 +134,8 @@ menuitemcheckbox "F7: show only good servers" "$showonlygoodservers" "showonlygo
 menuitemcheckbox "F8: show minutes remaining" "$showminremain" "showminremain $arg1"
 menuitemslider "Sort servers by: " 0 7 "$serversort" 1 ["ping" "number of players" "max players" "minutes remaining" "map name" "gamemode" "IP address" "description"] "serversort $arg1"
 
+alias lastsearchname ""
+
 newmenu "search player"
 
 menuitemtextinput "search nickname:  " "result $lastsearchname" "alias lastsearchname $arg1"
