added hook for custom connect scripts in serverbrowser
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4055 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -130,3 +130,13 @@ alias delta_edit_5 [ entproperty 0 $arg1 ]					// Changes the frist value on ent
 // HUD toggles
 alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
 
+// convenient connecting from the serverbrowser
+// sbconnect arg list:
+// arg1 IP, arg2 port,
+// arg3 1: server full
+// arg4 1: password protected
+// arg5 1: private mode
+// arg6 1: banned, 2: blacklisted 3: both
+// arg7 "server description"
+//alias sbconnect [ echo connecting to $arg7 ; connect $arg1 $arg2 ]
+
