fix mapname autocompletion
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4067 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -9,7 +9,7 @@ alias editent [
 ]
 
 // Auto-completions
-alias mapcomplete [complete $arg1 "packages/maps" cgz]
+alias mapcomplete [complete $arg1 "packages/maps/official packages/maps" cgz]
 mapcommands = "map tdm coop dm lms ts ctf pf lss osok tosok htf vip tktf ktf"
 loop i (listlen $mapcommands) [
     mapcomplete (at $mapcommands $i)
