editmapmsg command added
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4071 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -8,6 +8,8 @@ alias editent [
     ]
 ]
 
+alias editmapmsg [ saycommand ( concatword [/mapmsg ] (getmapmsg) ) ]
+
 // Auto-completions
 alias mapcomplete [complete $arg1 "packages/maps/official packages/maps" cgz]
 mapcommands = "map tdm coop dm lms ts ctf pf lss osok tosok htf vip tktf ktf"
