option to enable custom player skins in non-team modes only
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4155 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -293,6 +293,7 @@ newmenu gameplay
 
 menuitemtextinput "Nickname:			 " "result $curname" "name $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests" "Full color"] "teamdisplaymode $arg1"
+menuitemslider "Custom player skins: " 0 2 "$hidecustomskins" 1 [always "non-team modes" never] "hidecustomskins $arg1"
 menuitem "" -1
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitem "Change to the enemy team" "changeteam"
