--- a/ac/config/nicknameblacklist.cfg
+++ b/ac/config/nicknameblacklist.cfg
@@ -1,14 +1,27 @@
-// Server Nickname Blacklist
-// =========================
+// Server Nickname Blacklist + Whitelist
+// =====================================
 // WARNING: You can NOT use CubeScript in here!!
 
-// accept nickname [IP range]   // add this nickname to the whitelist (if an IP range is specified, only connects from that range are allowed)
+// accept nickname [IP range ...]   // add this nickname to the whitelist (if IP ranges are specified, only connects from that ranges are allowed)
 // block nicknamefragment1 [nicknamefragment2 ...]  // block nicknames that contain all specified fragments (up to 5)
 // blocki nicknamefragment1 [nicknamefragment2 ...]  // block nicknames that contain all specified fragments (up to 5), ignore cases
 
 // accept, block and blocki can be shortened to a, b and bi
 
-// the whitelist has higher priority than the blacklist
-// to add multiple IP ranges for one nickname, use several 'accept' lines
+// 'accept' has higher priority than 'block'
+// accept matches whole nicknames; block matches parts of nicknames
 
+// examples:
+// accept lorem                  // 'lorem' is an allowed nickname, no IP restrictions, no blacklist entries can block this name
+// accept ipsum  192.168.0.0/16  // accept 'ipsum' only, if he connects with an IP in the range 192.168.0.0-192.168.255.255
+// accept ipsum  10.0.0.0/8      // add another allowed IP range for 'ipsum'
+// block dolor                   // block all nicknames that contain the substring 'dolor', for example 'dolores' or 'odolor'; does not block 'DOLOR'
+// block sit amet                // block all nicknames that contain both substrings, for example 'sitamet' or 'dametosit'
+// blocki consectetur            // block all nicknames that contain the substring 'consectetur', ignore case; block for example 'aconsectetur', 'oConSecTeTuR'
+// accept foobar 192.168.0.0/16 127.0.0.1 1.2.3.4-2.3.4.5  // accept 'foobar'; allow several IP ranges
+
+// clan whitelist example: a clan named 'DEV' with two members, 'foo' and 'bar'
+// accept DEV|foo 1.2.3.4        // foo has a static IP
+// accept DEV|bar 192.168.0.0/16 // bar has a dynamit IP from that range
+// block DEV|                    // don't allow anyone else to wear the clan tag
 
