Updated map menus... minor menu adjustments... ponies mode now works better...
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4183 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -198,8 +198,8 @@ menuitemkeyinput "Map overview: "   toggleshowmap
 menuitemkeyinput "Drop CTF flag: "  dropflag
 menuitem "" -1
 menuitemcheckbox "Invert mouse: " "$invmouse" "invmouse $arg1"
-menuitemtextinput "Mouse sensitivity			" "$sensitivity" "sensitivity $arg1"
-menuitemtextinput "Sniper-scope sensitivity		" "$scopesensscale" "alias scopesensscale $arg1"
+menuitemtextinput "Mouse sensitivity				" "$sensitivity" "sensitivity $arg1" "" 12
+menuitemtextinput "Sniper-scope sensitivity scale			" "$scopesensscale" "alias scopesensscale $arg1" "" 12
 menuitem "" -1
 menuitem "Reset keybinds to default settings..." [ showmenu "Reset Binds" ]
 
@@ -211,8 +211,8 @@ menuitem "2   	  [ Apply! ]		" [ if $resetbindsyes [ resetbinds ] [ showmenu ""
 
 newmenu video
 
-menuitemtextinput "Screen width:				" "$scr_w" "scr_w $arg1"
-menuitemtextinput "Screen height:				" "$scr_h" "scr_h $arg1"
+menuitemtextinput "Screen width:				" "$scr_w" "scr_w $arg1" "" 11
+menuitemtextinput "Screen height:				" "$scr_h" "scr_h $arg1" "" 11
 
 menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 [Low Medium Good "Best (but slow)"] "new_gfx_quality $arg1"
 menuitem "" -1
@@ -293,7 +293,7 @@ newmenu gameplay
 
 menuitemtextinput "Nickname:			 " "result $curname" "name $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests" "Full color"] "teamdisplaymode $arg1"
-menuitemslider "Custom player skins: " 0 2 "$hidecustomskins" 1 [always "non-team modes" never] "hidecustomskins $arg1"
+menuitemslider "Custom player skins: " 0 2 "$hidecustomskins" 1 [ "Always show" "Only show in non-team modes" "Never show" ] "hidecustomskins $arg1"
 menuitem "" -1
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitem "Change to the enemy team" "changeteam"
@@ -312,19 +312,21 @@ menuitemslider "Console size: " 0 20 "$consize" 1 "" "consize $arg1"
 alias reducedviolencemode [
     if (= $arg1 1) [ 
         blood 0
-        gibnum 0
+        gib 0
         loop i (- 31 24) [ mutesound (+ (+ $i 24) 1) ] // Mute pain sounds
         echo OMG!Ponies! mode enabled - Violent game content has now been reduced.
     ] [ // Violent
         blood 1
-        gibnum 6
-        unmuteallsounds
+        gib 1
+        loop i (- 31 24) [ mutesound (+ (+ $i 24) 1) 1 ] // Un-mute pain sounds
         echo OMG!Ponies! mode disabled...
     ]
 ]
 alias getponiesmode [
     result (= $blood 0)
 ]
+
+// menuitemcheckbox "I'm attacking: " "(soundmuted 71)" "mutesound 71 (! $arg1)"
 
 newmenu HUD
 
@@ -333,7 +335,7 @@ menuitemcheckbox "   Stats " "(= $hidestats 0)" "hidestats (= $arg1 0)"
 menuitemcheckbox "   Gun " "$hudgun" "hudgun $arg1"
 menuitemcheckbox "   Radar " "(= $hideradar 0)" "hideradar (= $arg1 0)"
 menuitemcheckbox "   Team icon " "(= $hideteam 0)" "hideteam (= $arg1 0)"
-menuitemslider   "   Votes " 0 2 [$hidevote] 1 ["always" "until voted" "never"] [hidevote $arg1]
+menuitemslider   "   Votes: " 0 2 [$hidevote] 1 [ "Always show" "Show until you vote" "Never show" ] [hidevote $arg1]
 menuitemcheckbox "   Icons " "(= $hidehudequipment 0)" "hidehudequipment (= $arg1 0)"
 menuitemcheckbox "   Console " "(= $hideconsole 0)" "hideconsole (= $arg1 0)"
 menuitemcheckbox "   Spectator info " "(= $hidespecthud 0)" "hidespecthud (= $arg1 0)"
